                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 28-08-2004 changed: removed the need to restart because of audio channel mappings
  - 28-08-2004 changed: removed the need to restart because of hw ac3/dts output
  - 28-08-2004 added: proper downmixing of more than 2 channel sources to dolby surround on the stereo output
  - 25-08-2004 updated: polish language file (thanks napek)
  - 25-08-2004 changed: volumebar resources are allocated at startup to avoid hd spinup during movie
  - 25-08-2004 fixed: ac3/dts settings were reset to disabled on application stop
  - 24-08-2004 added: my music playlist: Showing progress dialog if loading takes more the 1,5 secs.
  - 24-08-2004 fixed: my video: directory history for virtual directory was broken
  - 24-08-2004 fixed: album info from allmusic.com
  - 23-08-2004 fixed: Fan was always set to custom mode even if tempcontrol and fanspeed were both disabled
  - 23-08-2004 updated: Spanish string.xml (thnx ezar2003)
  - 23-08-2004 added: mplayer.dll version info to SystemInfo screen when available.
  - 23-08-2004 fixed: Custom thumbnails will always be used if the thumbnail is on the Xbox.
  - 23-08-2004 changed: A bit or reorganization and formatting changes for My Programs.
  - 22-08-2004 fixed: thumb aspectratio in videoinfo screen 
  - 22-08-2004 changed: New render code for video output (faster, less memory).
  - 21-08-2004 fixed: location of dialog windows did not scale correctly to other resolutions.
  - 21-08-2004 fixed: Volume control using digital buttons (such as the remote).
  - 21-08-2004 added: Failsafe patch from SF (Thanks Guybrush)
  - 21-08-2004 added: <align> tag works for buttons now.