@@ -12,6 +12,7 @@ public:
   virtual void Stop()=0;
   virtual void SetLine(int iLine, const CStdString& strLine)=0;
   virtual void SetBackLight(int iLight)=0;
+  virtual void SetContrast(int iContrast)=0;
 protected:
 	virtual void Process()=0;
 	void StringToLCDCharSet(CStdString& strText);
